fix: disable bigger controls on mobile
Close #50

--- a/packages/lifemapjs/css/lifemap.css
+++ b/packages/lifemapjs/css/lifemap.css
@@ -289,6 +289,11 @@
     cursor: pointer;
 }
 
+/* Disable bigger controls on mobile */
+.pylifemap-map .ol-touch .ol-control button {
+    font-size: inherit;
+}
+
 /* Attribution */
 
 .pylifemap-map .ol-attribution.ol-uncollapsible {
